# cpp-from-the-sky-down

./: CONTRIBUTING.md  README.md
FutureExecutor/: FutureExecutorsThen.cpp
Presentations/cppcon2019/: polymorphism.md  polymorphism_presentation.html
cpp20_sql/: cpp20_sql.md  example.cpp  tagged_sqlite.h
cpp20_tagged_struct/: CMakeLists.txt  example.cpp  tagged_struct.h  tagged_struct_test.cpp
cpp20_tagged_tuple/: CMakeLists.txt  example.cpp  soa_vector.h  struct_of_vectors.h  tagged_tuple.h  tagged_tuple_test.cpp  to_from_nlohmann_json.h
futures/: futures.cpp
iterators-algorithms-ranges/: algorithm.cpp
meta_struct_20/cppcon_version/: CMakeLists.txt  fixed_string.cpp  meta_struct.h  meta_struct_applications_10.cpp  meta_struct_attributes_9.cpp  meta_struct_constructed_2.cpp  meta_struct_conversion_8.cpp  meta_struct_example_11.cpp  meta_struct_init_3.cpp  meta_struct_init_self_4.cpp  meta_struct_optional_arguments_6.cpp  meta_struct_print_5.cpp  meta_struct_required_named_args_7.cpp  meta_struct_sqlite.h  meta_struct_sqlite_example.cpp  struct.cpp  tagged_tuple_1.cpp  tagged_tuple_constructed_2.cpp
metaprogrammed_polymorphism/: benchmark.cpp  benchmark_imp.cpp  benchmark_imp.h  example.cpp  polymorphic.hpp  polymorphic_test.cpp  polymorphic_view.cpp  polymorphic_view.hpp
metaprogrammed_polymorphism/entity_examples/: overload.cpp  polymorphic.cpp  regular.cpp  virtual.cpp
metaprogramming_examples/: metaprogramming_examples.cpp
mutex_condition/: mutex_condition.cpp
polymorphism/crtp/: crtp.cpp
polymorphism/inheritance/: inheritance.cpp  shape_drawer.cpp  shape_drawer.hpp  shapes.hpp  shapes_interface.hpp
polymorphism/overloading/: overloading.cpp
polymorphism/regular_polymorphism/: regular_polymorphism.cpp  shapes.hpp  shapes_drawer.cpp  shapes_drawer.hpp  shapes_interface.hpp
rust/: .gitignore  Cargo.toml
rust/tagged_rusqlite/: Cargo.toml  README.md
rust/tagged_rusqlite/src/: lib.rs
rust/tagged_rusqlite_example/: Cargo.toml
rust/tagged_rusqlite_example/src/: lib.rs  main.rs
rust/tagged_rusqlite_proc/: Cargo.toml
rust/tagged_rusqlite_proc/src/: lib.rs
rust/tagged_rusqlite_proc_impl/: Cargo.toml
rust/tagged_rusqlite_proc_impl/src/: lib.rs  main.rs
rust_gmail_sorter/: Cargo.toml
rust_gmail_sorter/src/: main.rs
scratch/actions/: CMakeLists.txt  main.cpp
sfinae/: sfinae.cpp
simple_type_name/: example.cpp  simple_type_name.h
string/: string.cpp
tafn/: example.cpp  tafn.hpp  tafn.md
tagged_sqlite/: CMakeLists.txt  example.cpp  tagged_sqlite.cpp  tagged_sqlite.h
tagged_tuple/: example.cpp  tagged_tuple.h
template-meta-programming/: fibonacci.cpp
units/: units.hpp  units_example.cpp
variadics_examples/: tuple_no_variadics_hard_coded_index.cpp  tuple_no_variadics_sequence_index.cpp  tuple_variadics.cpp  tuple_variadics_print_fold.cpp  tuple_variadics_print_recursive.cpp  tuple_variadics_reverse_recursive.cpp  tuple_variadics_reverse_sequence.cpp
