[package]
name = "tagged_rusqlite"
version = "0.1.0"
authors = ["Your Name <jbandela@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tagged_rusqlite_proc = {path = "../tagged_rusqlite_proc"}
tagged_rusqlite_proc_impl = {path = "../tagged_rusqlite_proc_impl"}
rusqlite = {version="0.25",features=["bundled"]}
