[package]
name = "tagged_rusqlite_example"
version = "0.1.0"
authors = ["Your Name <jbandela@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tagged_rusqlite = {path = "../tagged_rusqlite"}
rusqlite = {version="0.25",features=["bundled"]}

