[package]
name = "tagged_rusqlite_proc"
version = "0.1.0"
authors = ["Your Name <jbandela@gmail.com>"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn="1.0"
quote="1.0"
proc-macro2 = "1.0"

tagged_rusqlite_proc_impl = {path = "../tagged_rusqlite_proc_impl"}
